# vowel-optimization

./: .gitignore  README.md  main.py  pyproject.toml
src/vowel_optimization/: __init__.py  __main__.py  adapter.py  definitions.py  functions.py  run_optimization.py  task.py
